// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Most Read Page A11y I can see the skip to content link 1`] = `"Ir al contenido"`;

exports[`Canonical Most Read Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=62&amp;p=mundo.popular.read.page&amp;x2=[responsive]&amp;x3=[news-mundo]&amp;x4=[es]&amp;x7=[list-datadriven]&amp;x8=[simorgh-nojs]&amp;x9=[Más+leídas+-+BBC+News+Mundo]&amp;x11=[2019-11-06T16:24:00Z]&amp;x12=[2100-11-06T16:39:00Z]\\"/>"`;

exports[`Canonical Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/mundo"`;

exports[`Canonical Most Read Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. La BBC no se hace responsable del contenido de sitios externos. Lee sobre nuestra postura acerca de enlaces externos."`;

exports[`Canonical Most Read Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Mundo",
  "url": "/mundo",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 2`] = `
Object {
  "text": "Por qué puedes confiar en la BBC",
  "url": "https://www.bbc.com/mundo/institucional-51359666",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 3`] = `
Object {
  "text": "Términos de uso",
  "url": "https://www.bbc.com/mundo/institucional-36400005",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 4`] = `
Object {
  "text": "Sobre la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400007",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 5`] = `
Object {
  "text": "Política de privacidad",
  "url": "https://www.bbc.com/mundo/institucional-36400009",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 7`] = `
Object {
  "text": "Contacta a la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400011",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Most Read Page Footer Link should match text and url 9`] = `
Object {
  "text": "Lee sobre nuestra postura acerca de enlaces externos.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Most Read Page Header I can see the branding 1`] = `"BBC News, Mundo"`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Noticias",
  "url": "/mundo",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "América Latina",
  "url": "/mundo/america_latina",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Internacional",
  "url": "/mundo/internacional",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Economía",
  "url": "/mundo/topics/ca170ae3-99c1-48db-9b67-2866f85e7342",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Tecnología",
  "url": "/mundo/topics/31684f19-84d6-41f6-b033-7ae08098572a",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Ciencia",
  "url": "/mundo/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Salud",
  "url": "/mundo/topics/c4794229-7f87-43ce-ac0a-6cfcd6d3cef2",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Cultura",
  "url": "/mundo/topics/6a73afa3-ea6b-45c1-80bb-49060b99f864",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "Deportes",
  "url": "/mundo/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 10`] = `
Object {
  "text": "Video",
  "url": "/mundo/media/video",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 11`] = `
Object {
  "text": "Hay Festival",
  "url": "/mundo/noticias-36795069",
}
`;

exports[`Canonical Most Read Page Header Navigation link should match text and url 12`] = `
Object {
  "text": "Centroamérica Cuenta",
  "url": "/mundo/noticias-43826245",
}
`;

exports[`Canonical Most Read Page I can see the headline 1`] = `"Más leídas"`;

exports[`Canonical Most Read Page I can see the list items 1`] = `"1Cómo es posible que Uber sobreviva con pérdidas de US$1.200 millones y sin nunca haber obtenido beneficiosÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 2`] = `"2\\"Me han dicho que me devuelva a México en mi propio show\\": John Leguizamo, el premiado actor que pelea contra HollywoodÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 3`] = `"3\\"En Chile se cumplió lo que nuestros profesores de Chicago esperaban que ocurriese\\": entrevista con Rolf Luders, ministro de economía de PinochetÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 4`] = `"4Quiénes son los miembros de la familia LeBarón que fueron víctimas de la emboscada en México a que dejó al menos 9 muertosÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 5`] = `"5Los habitantes de Bosnia que hablan un \\"idioma especial\\" parecido al español de América LatinaÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 6`] = `"6¿Desinstalar WhatsApp puede hacer que tu teléfono sea más seguro?Última actualización: 5 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 7`] = `"7Por qué 1 de cada 5 personas en EE.UU. está ahorrando dinero debajo del colchónÚltima actualización: 4 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 8`] = `"8\\"Asu mare\\", \\"qué palta\\", \\"estar misio\\"... Algunas de las expresiones que deberías aprender para entender a los peruanosÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 9`] = `"9Apuñalan a tres turistas mexicanos en JordaniaÚltima actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page I can see the list items 10`] = `"10\\"Las iglesias evangélicas son un problema de seguridad nacional en América Latina\\"Última actualización: 6 noviembre 2019"`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/mundo/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Most Read Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/mundo/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/mundo/popular/read"`;

exports[`Canonical Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Most Read Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Most Read Page SEO Heading level 1 1`] = `"Más leídas"`;

exports[`Canonical Most Read Page SEO Lang attribute 1`] = `"es"`;

exports[`Canonical Most Read Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/mundo/popular/read",
        "@type": "WebPage",
        "name": "Más leídas",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "publishingPrinciples": "https://www.bbc.com/mundo/institucional-51359666",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
      "url": "http://localhost:7080/mundo/popular/read",
    },
  ],
}
`;

exports[`Canonical Most Read Page SEO OG description 1`] = `"Más leídas - BBC News Mundo"`;

exports[`Canonical Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png"`;

exports[`Canonical Most Read Page SEO OG image alt 1`] = `"BBC News Mundo"`;

exports[`Canonical Most Read Page SEO OG locale 1`] = `"es-005"`;

exports[`Canonical Most Read Page SEO OG site name 1`] = `"BBC News Mundo"`;

exports[`Canonical Most Read Page SEO OG title 1`] = `"Más leídas - BBC News Mundo"`;

exports[`Canonical Most Read Page SEO OG type 1`] = `"website"`;

exports[`Canonical Most Read Page SEO OG url 1`] = `"http://localhost:7080/mundo/popular/read"`;

exports[`Canonical Most Read Page SEO Page title 1`] = `"Más leídas - BBC News Mundo"`;

exports[`Canonical Most Read Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Most Read Page SEO Twitter creator 1`] = `"@bbcmundo"`;

exports[`Canonical Most Read Page SEO Twitter description 1`] = `"Más leídas - BBC News Mundo"`;

exports[`Canonical Most Read Page SEO Twitter image alt 1`] = `"BBC News Mundo"`;

exports[`Canonical Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png"`;

exports[`Canonical Most Read Page SEO Twitter site 1`] = `"@bbcmundo"`;

exports[`Canonical Most Read Page SEO Twitter title 1`] = `"Más leídas - BBC News Mundo"`;
